# NeuronOS

./: .gitignore  2025-12-29-this-session-is-being-continued-from-a-previous-co.txt  COMPREHENSIVE_AUDIT_REPORT.md  Commands.txt  Commit_error.txt  IMPLEMENTATION_GUIDE.md  Makefile  NeuronOS.md  NeuronOS_Report.md  OS.sln  PHASE_5_VERIFICATION_REPORT.md  README.md  build-iso.sh  depo.txt  dev-sync.sh  dev-watch.sh  errors.txt  last_err.txt  logs.txt  pyproject.toml  pytest.ini  requirements.txt  test_err.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
Conversation Export/: 2025-12-28-this-session-is-being-continued-from-a-previous-co.txt  2025-12-29-this-session-is-being-continued-from-a-previous-co.txt  2025-12-30-2-if-i-understand-it-correctly-i-just-downloaded-a.txt  2026-01-03-1-i-am-still-getting-the-archlinux-login-screen-ins.txt  2026-01-03-i-am-still-getting-the-archlinux-login-screen-ins.txt  conversation-2025-12-29-001558.txt
Examples/: MacOS_Opus.html  NeuronOS_Opus.html  Win11_Opus.html
Files/: NeuronOS Project Dashboard.html  dev_guide_phase_0.md  dev_guide_phase_1.md  dev_guide_phase_2.md  dev_guide_phase_3_5.md
Files/logs/: Commit_error.txt
data/: apps.json
docs/: os-feature-comparison.md
iso-profile/: packages.x86_64  pacman.conf  profiledef.sh
scripts/: build-iso.sh  install-dev-deps.sh  test-in-vm.sh  validate-iso-profile.sh
templates/: macos-sonoma-basic.xml.j2  macos-sonoma-passthrough.xml.j2  windows11-basic.xml.j2  windows11-passthrough.xml.j2
tests/: conftest.py  test_audit_suite.py  test_common.py  test_gpu_scanner.py  test_guest_agent.py  test_hardware_detect.py  test_onboarding.py  test_security.py  test_store.py  test_store_cli.py  test_themes.py  test_updater.py  test_vm_manager.py
(+181 files in other folders)
